--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "@fortawesome/react-fontawesome": "latest",
+    "react-image-gallery": "latest",
+    "@fortawesome/free-solid-svg-icons": "latest"
   },
   "devDependencies": {
     "@types/node": "20.11.5",
